Experimental JodaTime removal (still in JRuby though...)