@@ -15,22 +15,21 @@
  */
 package com.thoughtworks.go.server.domain;
 
-import static org.junit.jupiter.api.Assertions.fail;
+import com.thoughtworks.go.domain.PipelineTimelineEntry;
+import org.junit.jupiter.api.Test;
 
+import java.time.ZonedDateTime;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import static com.thoughtworks.go.helper.PipelineMaterialModificationMother.modification;
-import com.thoughtworks.go.domain.PipelineTimelineEntry;
-import static org.hamcrest.Matchers.is;
-import org.joda.time.DateTime;
 import static org.hamcrest.MatcherAssert.assertThat;
-import org.junit.jupiter.api.Test;
+import static org.hamcrest.Matchers.is;
+import static org.junit.jupiter.api.Assertions.fail;
 
 public class PipelineMaterialModificationTest {
 
-    @Test public void shouldThrowNPEIfNullIsPassedIn() throws Exception {
+    @Test public void shouldThrowNPEIfNullIsPassedIn() {
         try {
             modification(new ArrayList<>(), 1, "123").compareTo(null);
             fail("Should throw NPE. That is the Comparable's contract.");
@@ -39,112 +38,112 @@ public class PipelineMaterialModificationTest {
         }
     }
 
-    @Test public void shouldReturn0IfComparedToItself() throws Exception {
-        DateTime now = new DateTime();
-        PipelineTimelineEntry self = modification(Arrays.asList("flyweight"), 1, "123", now);
+    @Test public void shouldReturn0IfComparedToItself() {
+        ZonedDateTime now = ZonedDateTime.now();
+        PipelineTimelineEntry self = modification(List.of("flyweight"), 1, "123", now);
         assertThat(self.compareTo(self), is(0));
 
-        PipelineTimelineEntry another = modification(Arrays.asList("flyweight"), 1, "123", now);
+        PipelineTimelineEntry another = modification(List.of("flyweight"), 1, "123", now);
         assertThat(self.compareTo(another), is(0));
         assertThat(another.compareTo(self), is(0));
     }
 
-    @Test public void shouldThrowExceptionIfIfComparedToADifferentClassObject() throws Exception {
+    @Test public void shouldThrowExceptionIfIfComparedToADifferentClassObject() {
         try {
-            modification(Arrays.asList("flyweight"), 1, "123").compareTo(new Object());
+            modification(List.of("flyweight"), 1, "123").compareTo(new Object());
             fail("Should throw up.");
         } catch (RuntimeException expected) {
         }
     }
 
-    @Test public void shouldCompareWhenThisModificationOccuredBeforeTheOtherModification() throws Exception {
-        PipelineTimelineEntry modification = modification(Arrays.asList("flyweight"), 1, "123", new DateTime());
-        PipelineTimelineEntry that = modification(2, Arrays.asList("flyweight"), Arrays.asList(new DateTime().plusMinutes(1)), 1, "123");
+    @Test public void shouldCompareWhenThisModificationOccuredBeforeTheOtherModification() {
+        PipelineTimelineEntry modification = modification(List.of("flyweight"), 1, "123", ZonedDateTime.now());
+        PipelineTimelineEntry that = modification(2, List.of("flyweight"), List.of(ZonedDateTime.now().plusMinutes(1)), 1, "123");
 
         assertThat(modification.compareTo(that), is(-1));
         assertThat(that.compareTo(modification), is(1));
     }
 
-    @Test public void shouldCompareModsWithMultipleMaterials() throws Exception {
-        List<String> materials = Arrays.asList("flyweight", "another");
-        DateTime base = new DateTime();
+    @Test public void shouldCompareModsWithMultipleMaterials() {
+        List<String> materials = List.of("flyweight", "another");
+        ZonedDateTime base = ZonedDateTime.now();
 
-        PipelineTimelineEntry modification = modification(1, materials, Arrays.asList(base.plusMinutes(1), base.plusMinutes(3)), 1, "123");
-        PipelineTimelineEntry that = modification(2, materials, Arrays.asList(base.plusMinutes(4), base.plusMinutes(2)), 1, "123");
+        PipelineTimelineEntry modification = modification(1, materials, List.of(base.plusMinutes(1), base.plusMinutes(3)), 1, "123");
+        PipelineTimelineEntry that = modification(2, materials, List.of(base.plusMinutes(4), base.plusMinutes(2)), 1, "123");
 
         assertThat(modification.compareTo(that), is(-1));
         assertThat(that.compareTo(modification), is(1));
     }
 
-    @Test public void shouldCompareModsWithMultipleMaterialsWithOneMaterialNotChanged() throws Exception {
-        List<String> materials = Arrays.asList("flyweight", "another");
-        DateTime base = new DateTime();
+    @Test public void shouldCompareModsWithMultipleMaterialsWithOneMaterialNotChanged() {
+        List<String> materials = List.of("flyweight", "another");
+        ZonedDateTime base = ZonedDateTime.now();
 
-        PipelineTimelineEntry modification = modification(1, materials, Arrays.asList(base, base.plusMinutes(3)), 1, "123");
-        PipelineTimelineEntry that = modification(2, materials, Arrays.asList(base, base.plusMinutes(2)), 1, "123");
+        PipelineTimelineEntry modification = modification(1, materials, List.of(base, base.plusMinutes(3)), 1, "123");
+        PipelineTimelineEntry that = modification(2, materials, List.of(base, base.plusMinutes(2)), 1, "123");
 
         assertThat(modification.compareTo(that), is(1));
         assertThat(that.compareTo(modification), is(-1));
     }
 
-    @Test public void shouldCompareModsWithNoMaterialsChanged() throws Exception {
-        List<String> materials = Arrays.asList("flyweight", "another");
-        DateTime base = new DateTime();
+    @Test public void shouldCompareModsWithNoMaterialsChanged() {
+        List<String> materials = List.of("flyweight", "another");
+        ZonedDateTime base = ZonedDateTime.now();
 
-        PipelineTimelineEntry modification = modification(1, materials, Arrays.asList(base, base.plusMinutes(3)), 1, "123", "pipeline");
-        PipelineTimelineEntry that = modification(2, materials, Arrays.asList(base, base.plusMinutes(3)), 2, "123", "pipeline");
+        PipelineTimelineEntry modification = modification(1, materials, List.of(base, base.plusMinutes(3)), 1, "123", "pipeline");
+        PipelineTimelineEntry that = modification(2, materials, List.of(base, base.plusMinutes(3)), 2, "123", "pipeline");
 
         assertThat(modification.compareTo(that), is(-1));
         assertThat(that.compareTo(modification), is(1));
     }
 
-    @Test public void shouldBreakTieOnMinimumUsingPipelineCounter() throws Exception {
-        List<String> materials = Arrays.asList("first", "second", "third", "fourth");
-        DateTime base = new DateTime();
+    @Test public void shouldBreakTieOnMinimumUsingPipelineCounter() {
+        List<String> materials = List.of("first", "second", "third", "fourth");
+        ZonedDateTime base = ZonedDateTime.now();
 
         //Because there is a tie on the lowest value i.e. date 2, use the counter to order
-        PipelineTimelineEntry modification = modification(1, materials, Arrays.asList(base, base.plusMinutes(3), base.plusMinutes(2), base.plusMinutes(4)), 1, "123", "pipeline");
-        PipelineTimelineEntry that = modification(2, materials, Arrays.asList(base, base.plusMinutes(2), base.plusMinutes(3), base.plusMinutes(2)), 2, "123", "pipeline");
+        PipelineTimelineEntry modification = modification(1, materials, List.of(base, base.plusMinutes(3), base.plusMinutes(2), base.plusMinutes(4)), 1, "123", "pipeline");
+        PipelineTimelineEntry that = modification(2, materials, List.of(base, base.plusMinutes(2), base.plusMinutes(3), base.plusMinutes(2)), 2, "123", "pipeline");
 
         assertThat(modification.compareTo(that), is(-1));
         assertThat(that.compareTo(modification), is(1));
     }
 
-    @Test public void shouldCompareModsWith4MaterialsWithOneMaterialNotChanged() throws Exception {
-        List<String> materials = Arrays.asList("first", "second", "third", "fourth");
-        DateTime base = new DateTime();
+    @Test public void shouldCompareModsWith4MaterialsWithOneMaterialNotChanged() {
+        List<String> materials = List.of("first", "second", "third", "fourth");
+        ZonedDateTime base = ZonedDateTime.now();
 
-        PipelineTimelineEntry modification = modification(1, materials, Arrays.asList(base, base.plusMinutes(3), base.plusMinutes(2), base.plusMinutes(4)), 1, "123", "pipeline");
-        PipelineTimelineEntry that = modification(2, materials, Arrays.asList(base, base.plusMinutes(2), base.plusMinutes(3), base.plusMinutes(1)), 2, "123", "pipeline");
+        PipelineTimelineEntry modification = modification(1, materials, List.of(base, base.plusMinutes(3), base.plusMinutes(2), base.plusMinutes(4)), 1, "123", "pipeline");
+        PipelineTimelineEntry that = modification(2, materials, List.of(base, base.plusMinutes(2), base.plusMinutes(3), base.plusMinutes(1)), 2, "123", "pipeline");
 
         assertThat(modification.compareTo(that), is(1));
         assertThat(that.compareTo(modification), is(-1));
     }
 
-    @Test public void shouldCompareModsUsingCounterToBreakTies() throws Exception {
-        List<String> materials = Arrays.asList("first", "second", "third");
-        DateTime base = new DateTime();
+    @Test public void shouldCompareModsUsingCounterToBreakTies() {
+        List<String> materials = List.of("first", "second", "third");
+        ZonedDateTime base = ZonedDateTime.now();
 
-        PipelineTimelineEntry modification = modification(1, materials, Arrays.asList(base, base.plusMinutes(3), base.plusMinutes(2)), 1, "123", "pipeline");
-        PipelineTimelineEntry that = modification(2, materials, Arrays.asList(base, base.plusMinutes(2), base.plusMinutes(3)), 2, "123", "pipeline");
+        PipelineTimelineEntry modification = modification(1, materials, List.of(base, base.plusMinutes(3), base.plusMinutes(2)), 1, "123", "pipeline");
+        PipelineTimelineEntry that = modification(2, materials, List.of(base, base.plusMinutes(2), base.plusMinutes(3)), 2, "123", "pipeline");
 
         assertThat(modification.compareTo(that), is(-1));
         assertThat(that.compareTo(modification), is(1));
     }
 
-    @Test public void shouldIgnoreExtraMaterialForComparison() throws Exception {
-        DateTime base = new DateTime();
+    @Test public void shouldIgnoreExtraMaterialForComparison() {
+        ZonedDateTime base = ZonedDateTime.now();
 
         //Ignore the extra material
-        PipelineTimelineEntry modification = modification(1, Arrays.asList("first", "second", "third"), Arrays.asList(base, base.plusMinutes(3), base.plusMinutes(2)), 1, "123", "pipeline");
-        PipelineTimelineEntry that = modification(2, Arrays.asList("first", "second"), Arrays.asList(base, base.plusMinutes(2)), 2, "123", "pipeline");
+        PipelineTimelineEntry modification = modification(1, List.of("first", "second", "third"), List.of(base, base.plusMinutes(3), base.plusMinutes(2)), 1, "123", "pipeline");
+        PipelineTimelineEntry that = modification(2, List.of("first", "second"), List.of(base, base.plusMinutes(2)), 2, "123", "pipeline");
 
         assertThat(modification.compareTo(that), is(1));
         assertThat(that.compareTo(modification), is(-1));
 
         //Now break the tie using counter and ignore the extra third material
-        modification = modification(1, Arrays.asList("first", "second", "third"), Arrays.asList(base, base.plusMinutes(3), base.plusMinutes(2)), 1, "123", "pipeline");
-        that = modification(2, Arrays.asList("first", "second"), Arrays.asList(base, base.plusMinutes(3)), 2, "123", "pipeline");
+        modification = modification(1, List.of("first", "second", "third"), List.of(base, base.plusMinutes(3), base.plusMinutes(2)), 1, "123", "pipeline");
+        that = modification(2, List.of("first", "second"), List.of(base, base.plusMinutes(3)), 2, "123", "pipeline");
 
         assertThat(modification.compareTo(that), is(-1));
         assertThat(that.compareTo(modification), is(1));
